--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
                     <a class="tar_download_link" href="https://github.com/sharon-thulasi/sample-repo/tarball/master">Download this project as a tar.gz file</a>
                 </section>
             </header>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
         </div>
         <!-- MAIN CONTENT -->
         <div id="main_content_wrap" class="outer">
